--- a/app/src/main/res/layout-sw600dp-land/layout_card_movie_reviews.xml
+++ b/app/src/main/res/layout-sw600dp-land/layout_card_movie_reviews.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2017 Luis Alberto Gómez Rodríguez
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -18,29 +17,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
     android:orientation="vertical">
 
-    <include layout="@layout/layout_card_movie_detail" />
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/cv_trailers"
+    <TextView
+        android:id="@+id/tv_label_reviews"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_horizontal_margin">
+        android:layout_marginBottom="@dimen/padding_half"
+        android:layout_marginTop="@dimen/padding_half"
+        android:text="@string/label_reviews"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
-        <include layout="@layout/layout_card_movie_trailers" />
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/cv_reviews"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_movie_reviews"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_horizontal_margin">
-
-        <include layout="@layout/layout_card_movie_reviews" />
-    </android.support.v7.widget.CardView>
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/activity_horizontal_margin" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
