--- a/app/src/main/res/layout-sw600dp-land/review_item.xml
+++ b/app/src/main/res/layout-sw600dp-land/review_item.xml
@@ -17,34 +17,41 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/padding_half"
-    android:layout_marginRight="@dimen/padding_half"
-    android:animateLayoutChanges="true"
     android:orientation="vertical">
 
-    <include layout="@layout/layout_card_movie_detail" />
+    <TextView
+        android:id="@+id/tv_author"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="18sp" />
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cv_trailers"
+    <TextView
+        android:id="@+id/tv_review_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/padding_half"
-        android:visibility="gone">
+        android:ellipsize="end"
+        android:maxLines="5"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        android:textSize="18sp" />
 
-        <include layout="@layout/layout_card_movie_trailers" />
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/cv_reviews"
+    <TextView
+        android:id="@+id/tv_view_more"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/padding_half"
         android:layout_marginTop="@dimen/padding_half"
-        android:visibility="gone">
+        android:text="@string/label_view_detail"
+        android:textAppearance="@style/AppTheme.LinkText"
+        android:textSize="14sp" />
 
-        <include layout="@layout/layout_card_movie_reviews" />
-    </android.support.v7.widget.CardView>
-
-    <Space
+    <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/activity_horizontal_margin" />
+        android:layout_height="1dp"
+        android:layout_marginBottom="@dimen/padding_half"
+        android:layout_marginTop="@dimen/padding_half"
+        android:background="@color/grey" />
 </LinearLayout>
